...
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="ride_request">Ride Request Type</string>
    <string name="earnings">Earnings</string>
    <string name="settings">Settings</string>
    <string name="empty" />

    <!--SettingsFragment-->
    <string name="edit_account">Edit Account</string>
...
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
    <string name="extra_sms">sms_body</string>
    <string name="text_tabulation">\t</string>
    <string name="version">Version\u00A0</string>
    <string name="navigate">Navigate</string>

    <!--Driver Map Fragment -->
    <string name="map.rate.title">Driver Earnings</string>
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

...
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>

    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
    <string name="ride_request_description">Your current ride request type is now set to the following categories. You are set to receive:\n\n</string>
    <string name="ride_request_female_only">\nfemale driver requests ONLY</string>
    <string name="ride_request_dc_only">\ndirect connect requests ONLY</string>
    <string name="ride_request_and">\nand\n</string>
    <string name="ride_request_female_driver_requests">\nfemale driver requests</string>
    <string name="ride_request_dc_requests">\ndirect connect requests</string>
    <string name="ride_request_all_selected">\n\nAll car types are selected</string>
    <string name="ride_request_select_others">\n\nSelect or register for other car categories to receive ride requests in those categories.</string>
    <string name="ride_request_online">%1$s %2$s is online</string>
    <string name="ride_request_you_are_online">You are online</string>
    <string name="ride_request_description_online">You are set to receive\n\n</string>
    <string name="ride_request_female_only_online">%s\nfemale driver requests ONLY\n\nTo receive requests from all genders, please visit Menu -> Ride Request Type</string>
    <string name="ride_request_dc_only_online">%s\ndirect connect requests ONLY\n\nTo remove this filter, please visit Menu -> Ride Request Type</string>
    <string name="ride_request_by_admin_title">Car Categories Updated by Admin!</string>
    <string name="ride_request_by_admin_message">Please visit Menu -> Ride Request Type to review</string>
    <string name="ride_request_added">%s activated</string>
    <string name="ride_request_removed">%s disabled</string>
    <string name="ride_request_go_to_enable">\n\nPlease visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed_title">Car Categories Disabled!</string>
    <string name="ride_request_missed_message">Please visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed">Car category &lt;%s&gt; was disabled due to many consecutive missed requests.\nPlease visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed_plural">Car categories &lt;%s&gt; were disabled due to many consecutive missed requests.\nPlease visit Menu -> Ride Request Type to enable</string>

    <string-array name="week_days">
...
